syntax = "proto3";

package setting;

option go_package = "github.com/dstgo/wigfrid/pb;pb";

import "result.proto";
import "daemon.proto";

message RoomSetting {
  string name = 1;
  string password = 2;
  string Description = 3;
  int64 slots = 4;
  bool pvp = 5;
  string mode = 6;
  bool paused = 7;
  bool vote = 8;
  bool kick = 9;
}

message RawWorldSetting {
  string rawLuaString = 1;
}

message SettingPair {
  string key = 1;
  string value = 2;
}

message WorldSetting {
  repeated SettingPair master = 1;
  repeated SettingPair cave = 2;
}

service SettingService {
  rpc GetRoomSetting(daemon.ContainerId) returns(RoomSetting);
  rpc SaveRoomSetting(RoomSetting) returns(result.Notify);
  rpc GetWorldSetting(daemon.ContainerId) returns(WorldSetting);
  rpc SaveWorldSetting(WorldSetting) returns(result.Notify);
  rpc GetRawWorldSetting(daemon.ContainerId) returns(RawWorldSetting);
  rpc SaveRawWorldSetting(RawWorldSetting) returns(result.Notify);
}

